fixed next link z-index

--- a/splashscreen/scss/main.scss
+++ b/splashscreen/scss/main.scss
@@ -58,7 +58,7 @@ h3 {
   }
 }
 
-.next-slide {
+#next-slide {
   font-size: 18px;
   font-weight: 400;
   display: block;
@@ -66,6 +66,7 @@ h3 {
   position: fixed;
   bottom: 1.5em;
   right: 2em;
+  z-index: 99999;
 }
 
 .bordered {
